<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>gyurix</groupId>
    <artifactId>spigotlib</artifactId>
    <name>SpigotLib</name>
    <version>9.4-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/titanscraft/TCore</url>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub TitansCraft Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/titanscraft/TCore</url>
        </repository>
    </distributionManagement>
    <dependencies>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.9.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.milkbowl</groupId>
            <artifactId>vault</artifactId>
            <version>1.7.2-b107</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>titanscraft</groupId>
            <artifactId>spigot</artifactId>
            <version>1.14</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>titanscraft</groupId>
            <artifactId>spigot_1_7_10</artifactId>
            <version>1.7.10</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.14.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>it.unimi.dsi</groupId>
            <artifactId>fastutil</artifactId>
            <version>8.3.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>